style:user-avatar flex to prevent wrong positioning

--- a/components/user-avatar/user-avatar.component.scss
+++ b/components/user-avatar/user-avatar.component.scss
@@ -5,7 +5,7 @@
   //border:3px solid #fff;
   position: relative;
   overflow: hidden;
-  display:inline-block;
+  display: flex;
   .user-letter,.user-icon{
     display: flex;
     color: #fff;
